--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "funtaptic.scene-meta",
   "displayName": "Scene Meta",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "description": "Allows you to add components to scenes"
 }
-
